--- a/dist.ini
+++ b/dist.ini
@@ -6,25 +6,6 @@ copyright_year      = 2013
 abstract            = A simple trie for a simple mind
 version             = 0.001
 
-[@Basic]
-[Prereqs]
-Moo = 0
-
-[Prereqs / TestRequires]
-Test::More = 0
-
-[Git::Check]
-[Git::Commit]
- 
-[Git::CommitBuild]
-    release_branch = releases
-[Git::Tag]
-    tag_format = v%v
-    branch     = releases
- 
-[Git::Push]
-    push_to = origin      ; this is the default
-    push_to = origin HEAD:refs/heads/released ; also push to released branch
-
-[ReadmeMarkdownFromPod]
-
+[@LOGIE]
+dist = Simple-Trie
+repository = github
