Added some pod and gitignore

--- a/dist.ini
+++ b/dist.ini
@@ -2,10 +2,10 @@ name            	= Simple-Trie
 author          	= Logan Bell <loganbell@gmail.com>
 license         	= Perl_5
 copyright_holder 	= Logan Bell
-copyright_year      = 2013
-abstract            = A simple trie for a simple mind
+copyright_year    = 2013
+abstract          = A simple trie for a simple mind
 
-[@LOGIE]
+[@Author::LOGIE]
 dist = Simple-Trie
 repository = github
 
