--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author          	= Logan Bell <loganbell@gmail.com>
 license         	= Perl_5
 copyright_holder 	= Logan Bell
 copyright_year    = 2013
-abstract          = A simple trie for a simple mind
+abstract          = A simple trie
 
 [@Author::LOGIE]
 dist = Simple-Trie
